Setup submodule processing in GIT

--- a/tool/Makefile
+++ b/tool/Makefile
@@ -6,13 +6,14 @@ clean:
 
 install:
 	#
-	# The hexio submodule did not arrive well in GIT
+	# Installing a good DER dumping utility for developers:
 	#
-	# If you need a good DER dumping utility, check it out yourself:
 	# https://github.com/vanrein/hexio
 	#
-	@#NOTYET# install -m 0755 hexio/derdump.py "$(PREFIX)/bin/derdump"
+	# This tool will complain about DER errors -- but continue.
+	#
+	install -m 0755 hexio/derdump.py "$(PREFIX)/bin/derdump"
 
 uninstall:
-	@#NOTYET# rm -f "$(PREFIX)/bin/derdump"
+	rm -f "$(PREFIX)/bin/derdump"
 
