Added an ASN.1 compiler as a submodule, added RFCs for X.509, Kerberos, LDAP.

--- a/tool/Makefile
+++ b/tool/Makefile
@@ -12,7 +12,7 @@ install:
 	#
 	# This tool will complain about DER errors -- but continue.
 	#
-	install -m 0755 hexio/derdump.py "$(PREFIX)/bin/derdump"
+	[ -r hexio/derdump.py ] && install -m 0755 hexio/derdump.py "$(PREFIX)/bin/derdump"
 
 uninstall:
 	rm -f "$(PREFIX)/bin/derdump"
