--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tool/hexio"]
 	path = tool/hexio
 	url = https://github.com/vanrein/hexio
+[submodule "tool/asn1ate"]
+	path = tool/asn1ate
+	url = https://github.com/vanrein/quick-der
