Removed submodules, made them build/runtime dependencies  - "derdump" can be installed with the (advised) hexio companion package  - "asn2quickder" can be installed with the "asn2quickder" package

--- a/rfc/Makefile
+++ b/rfc/Makefile
@@ -14,17 +14,15 @@ TARGETS = rfc3280.h rfc4120.h rfc4511.h rfc5280.h \
 	rfc2578.h
 #DOWNWARD-SPIRAL-INTO-ITU# TARGETS += InformationFramework.h UsefulDefinitions.h
 
-ASN2QUICKDER_DIR = ../tool/asn1ate
-
-ASN2QUICKDER_CMD = $(ASN2QUICKDER_DIR)/asn1ate/asn2quickder.py
-ASN2QUICKDER_RUN = PYTHONPATH='$(ASN2QUICKDER_DIR)' $(ASN2QUICKDER_CMD)
+ASN2QUICKDER_CMD = $(shell which asn2quickder)
+ASN2QUICKDER_RUN = $(ASN2QUICKDER_CMD)
 
 all: $(TARGETS) test
 
 test: $(TARGETS)
 	rm -f quick-der
 	ln -s . quick-der
-	@ $(foreach h,$(TARGETS),echo > '$(h:.h=.c)' '#include "$(h)"' && [ -r $h ] && gcc -I . -c '$(h:.h=.c)' && ) echo 'Passed all header compilation tests' || echo Skipped compilation of skipped header files
+	@ $(foreach h,$(TARGETS),echo > '$(h:.h=.c)' '#include "$(h)"' && [ -r $h ] && gcc -I ../include -I . -c '$(h:.h=.c)' && ) echo 'Passed all header compilation tests' || echo Skipped compilation of skipped header files
 
 %.h: %.asn1
 	@ [ -r $(ASN2QUICKDER_CMD) ] && $(ASN2QUICKDER_RUN) $< || echo Skipped ASN.1 header file generation for $<
