--- a/itu/Makefile
+++ b/itu/Makefile
@@ -13,10 +13,10 @@ CC ?= gcc
 
 TARGETS = # rfc3280.h rfc4120.h rfc4511.h rfc5280.h
 
-ASN2QUICKDER_DIR = ../tool/asn1ate
+ASN2QUICKDER_DIR ?= ../tool/asn1ate
 
-ASN2QUICKDER_CMD = $(ASN2QUICKDER_DIR)/asn1ate/asn2quickder.py
-ASN2QUICKDER_RUN = PYTHONPATH='$(ASN2QUICKDER_DIR)' $(ASN2QUICKDER_CMD)
+ASN2QUICKDER_CMD ?= $(ASN2QUICKDER_DIR)/asn1ate/asn2quickder.py
+ASN2QUICKDER_RUN ?= PYTHONPATH='$(ASN2QUICKDER_DIR)' $(ASN2QUICKDER_CMD)
 
 all: $(TARGETS) test
 
