--- a/rfc/Makefile
+++ b/rfc/Makefile
@@ -16,8 +16,8 @@ TARGETS = rfc3280.h rfc4120.h rfc4511.h rfc5280.h \
 	rfc2578.h
 #DOWNWARD-SPIRAL-INTO-ITU# TARGETS += InformationFramework.h UsefulDefinitions.h
 
-ASN2QUICKDER_CMD = $(shell which asn2quickder)
-ASN2QUICKDER_RUN = $(ASN2QUICKDER_CMD)
+ASN2QUICKDER_CMD ?= $(shell which asn2quickder)
+ASN2QUICKDER_RUN ?= $(ASN2QUICKDER_CMD)
 
 all: $(TARGETS) test
 
