Portable paths in pkg-config file

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -7,19 +7,20 @@ CFLAGS=-Wall -Wextra -pedantic -Wstrict-prototypes -Wold-style-definition -Wwrit
 all: $(TARGETS)
 
 install: $(TARGETS)
-	install $(TARGETS) '$(DESTDIR)$(PREFIX)/lib'
-	mkdir -p '$(DESTDIR)$(PREFIX)/include/quick-der'
+	install $(TARGETS) '$(DESTDIR)/$(PREFIX)/lib'
+	mkdir -p '$(DESTDIR)/$(PREFIX)/include/quick-der'
 	install ../include/quick-der/api.h '$(DESTDIR)$(PREFIX)/include/quick-der'
-	mkdir -p '$(DESTDIR)$(PREFIX)/lib/pkgconfig'
-	( echo 'prefix=$(PREFIX)' ; echo 'exec_prefix=$${prefix}' ; echo 'includedir=$${prefix}/include' ; echo 'libdir=$${prefix}/lib' ; echo ; echo 'Name: quick-der' ; echo "Description: Quick \`n\' Easy DER library" ; echo 'Version: 0.0' ; echo 'URL: https://github.com/vanrein/quick-der' ; echo 'Cflags: -I$${includedir}' ; echo 'Libs: -L$${libdir} -lquickder' ) > '$(DESTDIR)$(PREFIX)/lib/pkgconfig/quick-der.pc'
+	mkdir -p '$(DESTDIR)$/(PREFIX)/lib/pkgconfig'
+	( echo 'prefix=$(DESTDIR)$/(PREFIX)' ; echo 'exec_prefix=$${prefix}' ; echo 'includedir=$${prefix}/include' ; echo 'libdir=$${prefix}/lib' ; echo ; echo 'Name: quick-der' ; echo "Description: Quick \`n\' Easy DER library" ; echo 'Version: 0.0' ; echo 'URL: https://github.com/vanrein/quick-der' ; echo 'Cflags: -I$${includedir}' ; echo 'Libs: -L$${libdir} -lquickder' ) > '$(DESTDIR)/$(PREFIX)/lib/pkgconfig/quick-der.pc'
 
 uninstall:
-	for f in $(TARGETS); do rm -f "$(DESTDIR)$(PREFIX)/lib/$$f" ; done
-	rm -f '$(DESTDIR)$(PREFIX)/include/quick-der/api.h'
-	rmdir --ignore-fail-on-non-empty '$(DESTDIR)$(PREFIX)/include/quick-der'
-	rm -f '$(DESTDIR)$(PREFIX)/lib/pkgconfig/quick-der.pc'
-	rmdir --ignore-fail-on-non-empty '$(DESTDIR)$(PREFIX)/lib/pkgconfig'
+	for f in $(TARGETS); do rm -f "$(DESTDIR)/$(PREFIX)/lib/$$f" ; done
+	rm -f '$(DESTDIR)/$(PREFIX)/include/quick-der/api.h'
+	rmdir --ignore-fail-on-non-empty '$(DESTDIR)/$(PREFIX)/include/quick-der'
+	rm -f '$(DESTDIR)/$(PREFIX)/lib/pkgconfig/quick-der.pc'
+	rmdir --ignore-fail-on-non-empty '$(DESTDIR)/$(PREFIX)/lib/pkgconfig'
 
+.PHONY: clean	
 clean:
 	rm -f $(OBJS) $(TARGETS)
 
