Small changes to promote Windows porting and generally improve code quality

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,8 @@ OBJS = der_pack.o der_prepack.o der_unpack.o der_iterate.o der_walk.o der_skipen
 
 TARGETS = libquickder.a libquickder.so
 
-CFLAGS=-Wall -Wextra -pedantic -Wstrict-prototypes -Wold-style-definition -Wwrite-strings -Wshadow -Wformat -Wformat-security -Wunreachable-code -Wmissing-prototypes
+CFLAGS += -Wall -Wextra -pedantic -Wstrict-prototypes -Wold-style-definition -Wwrite-strings -Wshadow -Wformat -Wformat-security -Wunreachable-code -Wmissing-prototypes
+CFLAGS += -std=gnu11
 
 CC ?= gcc
 AR ?= ar
