A really interesting bug -- needed $(HOSTCC) for testing, not $(CC)

--- a/test/Makefile
+++ b/test/Makefile
@@ -22,7 +22,7 @@ uninstall:
 
 
 %.test: %.c $(LIBDIR)/$(LIBQD)
-	$(CC) -I ../include -o "$@" "$<" "$(LIBDIR)/$(LIBQD)" $(EXTRALIBS)
+	$(HOSTCC) -I ../include -o "$@" "$<" "$(LIBDIR)/$(LIBQD)" $(EXTRALIBS)
 
 %.ok: %.test
 	"./$<" && touch "$@"
