Removed a situation in which opt-out was overlooked in der_unpack(); introduced der_focus() as required for LillyDAP's lillydump test, and as requested in https://github.com/vanrein/quick-der/issues/6

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -17,6 +17,8 @@ DESTPATH=$(abspath $(DESTDIR)/$(PREFIX))
 
 all: $(TARGETS)
 
+anew: clean all
+
 install: $(TARGETS)
 	mkdir -p "$(DESTPATH)/include/quick-der"
 	mkdir -p "$(DESTPATH)/lib/pkgconfig"
