CMake: ASN.1 to headers support
 - Add a macro for converting one asn1 file to a header
 - Add macro for converting a bunch of them as a group
 - Document convenient way to ensure they get built
 - Convert rfc/ directory to using the macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,58 +46,9 @@ endif()
 # BUILDING
 #
 add_subdirectory(lib)
-
-
 if (SPEC_RFC)
-	list (APPEND specs "rfc/rfc2315")
-	list (APPEND specs "rfc/rfc2578")
-	list (APPEND specs "rfc/rfc2898")
-	list (APPEND specs "rfc/rfc3062")
-	list (APPEND specs "rfc/rfc3280")
-	list (APPEND specs "rfc/rfc3909")
-	list (APPEND specs "rfc/rfc4120")
-	list (APPEND specs "rfc/rfc4178")
-	list (APPEND specs "rfc/rfc4373")
-	list (APPEND specs "rfc/rfc4511")
-	list (APPEND specs "rfc/rfc4531")
-	list (APPEND specs "rfc/rfc5208")
-	list (APPEND specs "rfc/rfc5280")
-	list (APPEND specs "rfc/rfc5805")
-	list (APPEND specs "rfc/rfc6960")
-	list (APPEND specs "rfc/rfc7292")
-endif ()
-
-if (SPEC_ITU)
-	#TODO# list (APPEND specs "itu/xxx")
-endif ()
-
-if (SPEC_ARPA2)
-	#TODO# list (APPEND specs "arpa2/xxx")
-endif ()
-
-foreach (spec ${specs})
-	get_filename_component (specdir  ${spec} DIRECTORY)
-	get_filename_component (specname ${spec} NAME)
-	add_custom_target (${specname}.h
-		${CMAKE_SOURCE_DIR}/tool/asn2quickder.py ${CMAKE_SOURCE_DIR}/${spec}.asn1
-		COMMENT "Build include file ${spec}.h from ASN.1 spec"
-		SOURCES ${spec}.asn1)
-	add_custom_command (OUTPUT ${specname}.h
-		DEPENDS ${spec}.asn1
-		POST_BUILD
-		COMMAND ${CMAKE_SOURCE_DIR}/tool/asn2quickder.py ${CMAKE_SOURCE_DIR}/${specdir}/${specname}.asn1
-		COMMENT "Build specification ${spec}"
-		VERBATIM)
-	include_directories (${specdir})
-	add_custom_command (OUTPUT ${specname}.c
-		POST_BUILD
-		COMMAND echo >"${specname}.c" "#include \"${specname}.h\""
-		COMMENT "Source that tests by including the generated ${specname}.h")
-		# not.VERBATIM --> we need the > in the COMMAND
-	#TODO:WHYNOT# add_dependencies (${spec}.h quickder)
-	list (APPEND header_files ${specname}.h)
-endforeach()
-
+	add_subdirectory(rfc)
+endif()
 
 #
 # TESTS
