CMake: improve Config* files
 - add linking flags to Quick-DER_LIBRARIES
 - provide path to static libs through Quick-DER_STATIC_LIBRARIES

Infrastructure for config-files improvements:
 - match docs to code
 - change search location for ConfigVersion to be consistent
   with other generated files (e.g. contrib/cmake).

--- a/contrib/cmake/Quick-DERConfig.cmake.in
+++ b/contrib/cmake/Quick-DERConfig.cmake.in
@@ -5,6 +5,10 @@
  
 # Compute paths
 get_filename_component(Quick-DER_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+
+set(Quick-DER_LIB_DIRS "@CONF_LIB_DIRS@")
 set(Quick-DER_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
  
-set(Quick-DER_LIBRARIES quickder)
+set(Quick-DER_LIBRARIES -L${Quick-DER_LIB_DIRS} quickder)
+set(Quick-DER_STATIC_LIBRARIES ${Quick-DER_LIB_DIRS}/libquickder.a)
+
