--- a/arpa2/CMakeLists.txt
+++ b/arpa2/CMakeLists.txt
@@ -1,9 +1,12 @@
 # Conversion of ASN.1 specs to convenient header files
 include(MacroASN1Header)
 
+include_directories(${CMAKE_BINARY_DIR}/rfc)
+
 add_custom_target(arpa2-headers ALL)
 add_asn1_headers(arpa2-headers
 	kxover
 	RemotePKCS11
 	)
 
+add_dependencies(arpa2-headers rfc-headers)
