--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,8 +13,12 @@ add_executable (ldap.test
 target_include_directories(ldap.test PUBLIC ${CMAKE_BINARY_DIR}/rfc)
 target_link_libraries(ldap.test
 	quickderStatic)
-add_test (ldap.test
-	ldap.test ${CMAKE_CURRENT_SOURCE_DIR}/ldap-search-request.bin)
+add_test (ldap.test.0
+	ldap.test ${CMAKE_CURRENT_SOURCE_DIR}/ldap-search-request-0.bin)
+add_test (ldap.test.1
+	ldap.test ${CMAKE_CURRENT_SOURCE_DIR}/ldap-search-request-1.bin)
+add_test (ldap.test.2
+	ldap.test ${CMAKE_CURRENT_SOURCE_DIR}/ldap-search-request-2.bin)
 
 add_executable (der_data.test
 	der_data.c)
